--- a/templates/iptables.rules.j2
+++ b/templates/iptables.rules.j2
@@ -50,9 +50,16 @@
 			{% endif -%}
 		{% endif -%}
 
+		{% if 'pipes_to' in chain -%}
+{% for pipe in chain.pipes_to -%}
+-A {{ chain.name }} -p {{ pipe.proto }} -m {{ pipe.proto }} -s {{ pipe.source }} -j {{ pipe.chain }}
+{% endfor -%}
+		{% endif -%}
+
 		{% if 'jump' in chain -%}
 -A {{ chain.name }} -j {{ chain.jump }}
 		{%- endif -%}
+
 	{% endfor -%}
 {%- endif %}
 
