--- a/templates/ip6tables.rules.j2
+++ b/templates/ip6tables.rules.j2
@@ -50,6 +50,7 @@
 {% for pipe in chain.pipes_to -%}
 -A {{ chain.name }} -p {{ pipe.proto }} -m {{ pipe.proto }} -s {{ pipe.source }} -j {{ pipe.chain }}
 {% endfor -%}
+		{%- endif -%}
 
 		{% if 'jump' in chain -%}
 -A {{ chain.name }} -j {{ chain.jump }}
