--- a/templates/iptables.rules.j2
+++ b/templates/iptables.rules.j2
@@ -1,3 +1,14 @@
+*nat
+:PREROUTING ACCEPT
+:INPUT ACCEPT
+:OUTPUT ACCEPT
+:POSTROUTING ACCEPT
+{% if 'tunnel' in iptables %}
+-A POSTROUTING -s {{ iptables.tunnel.network }} -o {{ iptables.tunnel.device }} -j MASQUERADE
+{% endif %}
+
+COMMIT
+
 *filter
 {% if iptables.iptables_chain -%}
 {% for chain in iptables.iptables_chain -%}
@@ -10,10 +21,12 @@
 
 # Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
 -A INPUT -i lo -j ACCEPT
+-A OUTPUT -o lo -j ACCEPT
 -A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT
 
 # Accepts all established inbound connections
 -A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
+-A OUTPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
 
 {% if 'ssh_port' in iptables -%}
 # Allows SSH connections
@@ -68,6 +81,12 @@
 
 # log iptables denied calls (access via 'dmesg' command)
 -A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7
+
+
+{% if 'tunnel' in iptables %}
+-A FORWARD -i {{ iptables.tunnel.device }} -o {{ iptables.tunnel.tun_device }} -m state --state ESTABLISHED,RELATED -j ACCEPT
+-A FORWARD -s {{ iptables.tunnel.network }} -o {{ iptables.tunnel.device }} -j ACCEPT
+{% endif %}
 
 # Reject all other inbound - default deny unless explicitly allowed policy:
 -A INPUT -j REJECT
