--- a/templates/ip6tables.rules.j2
+++ b/templates/ip6tables.rules.j2
@@ -1,3 +1,14 @@
+*nat
+:PREROUTING ACCEPT
+:INPUT ACCEPT
+:OUTPUT ACCEPT
+:POSTROUTING ACCEPT
+{% if 'tunnel' in iptables %}
+-A POSTROUTING -s {{ iptables.tunnel.network }} -o {{ iptables.tunnel.device }} -j MASQUERADE
+{% endif %}
+
+COMMIT
+
 *filter
 {% if iptables.iptables_chain -%}
 {% for chain in iptables.iptables_chain -%}
@@ -8,6 +19,8 @@
 -A INPUT -i lo -j ACCEPT
 -A INPUT -d ::1/128 ! -i lo -j REJECT --reject-with icmp6-port-unreachable
 -A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
+
+-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
 
 
 {% if 'ssh_port' in iptables -%}
@@ -58,18 +71,10 @@
 
 	{% endfor -%}
 {%- endif %}
--A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
--A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
--A INPUT -p udp -m udp --sport 5353 --dport 5353 -j ACCEPT
--A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
--A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
--A INPUT -p tcp -m tcp --dport 143 -j ACCEPT
--A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
--A INPUT -p tcp -m state --state NEW -m tcp --dport 55445 -j ACCEPT
 
 -A INPUT -p ipv6-icmp -j ACCEPT
+-A OUTPUT -p ipv6-icmp -j ACCEPT
+-A OUTPUT -p igmp -j ACCEPT
 -A INPUT -m limit --limit 5/min -j LOG --log-prefix "ip6tables denied: " --log-level 7
--A INPUT -j REJECT --reject-with icmp6-port-unreachable
--A FORWARD -j REJECT --reject-with icmp6-port-unreachable
--A OUTPUT -j ACCEPT
+
 COMMIT
