New configuration format
Allow to define any kind of rules

--- a/templates/ip6tables.rules.j2
+++ b/templates/ip6tables.rules.j2
@@ -3,9 +3,6 @@
 :INPUT ACCEPT
 :OUTPUT ACCEPT
 :POSTROUTING ACCEPT
-{% if 'tunnel' in iptables %}
--A POSTROUTING -s {{ iptables.tunnel.network }} -o {{ iptables.tunnel.device }} -j MASQUERADE
-{% endif %}
 
 COMMIT
 
@@ -16,30 +13,19 @@ COMMIT
 {% endfor -%}
 {% endif -%}
 
--A INPUT -i lo -j ACCEPT
 -A INPUT -d ::1/128 ! -i lo -j REJECT --reject-with icmp6-port-unreachable
--A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-
--A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-
-
-{% if 'ssh_port' in iptables -%}
-# Allows SSH connections
-# The --dport number is the same as in /etc/ssh/sshd_config
--A INPUT -p tcp -m state --state NEW --dport {{ iptables.ssh_port }} -j ACCEPT
-{% endif %}
-
 
 {% if iptables.iptables_chain -%}
 	{% for chain in iptables.iptables_chain -%}
 
-		{% if 'pipes' in chain -%}
-{% for pipe in chain.pipes -%}
--A {{ pipe.chain }} -p {{ pipe.proto }} -m {{ pipe.proto }} -s {{ pipe.source }} -j {{ chain.name }}
+		{% if 'pipes_to' in chain and 'ipv6' in chain.pipes_to -%}
+{% for pipe in chain.pipes_to.ipv6 -%}
+-A {{ chain.name }} -p {{ pipe.proto }} -m {{ pipe.proto }} -s {{ pipe.source }} -j {{ pipe.chain }}
 {% endfor -%}
 		{% endif -%}
 
 		{% if 'rules' in chain -%}
+
 			{% if 'tcp_dport_accept' in chain.rules -%}
 {% for port in chain.rules.tcp_dport_accept -%}
 -A {{ chain.name }} -p tcp -m tcp --dport {{ port }} -j ACCEPT
@@ -57,25 +43,38 @@ COMMIT
 -A {{ chain.name }} -p udp --sport {{ port.sport }} --dport {{ port.dport }} -j ACCEPT
 {% endfor -%}
 			{% endif -%}
+
+			{% if 'rule' in chain.rules -%}
+				{% for rule in chain.rules.rule -%}
+{% if (not 'source' in rule or (rule.source | ipv6)) and (not 'dest' in rule or (rule.dest | ipv6)) and (not 'ipv4' in rule or not rule.ipv4) -%}
+-A {{ chain.name }}
+{%- if 'proto' in rule %} -p {{ rule.proto }}{% endif %}
+{%- if 'module' in rule %} -m {{ rule.module }}{% endif %}
+{%- if 'iniface' in rule %} -i {{ rule.iniface }}{% endif %}
+{%- if 'outiface' in rule %} -o {{ rule.outiface }}{% endif %}
+{%- if 'sport' in rule %} --sport {{ rule.sport }}{% endif %}
+{%- if 'dport' in rule %} --dport {{ rule.dport }}{% endif %}
+{%- if 'sports' in rule %} --sports {{ rule.sports | join(',') }}{% endif %}
+{%- if 'dports' in rule %} --dports {{ rule.dports | join(',') }}{% endif %}
+{%- if 'state' in rule %} --state {{ rule.state }}{% endif %}
+{%- if 'source' in rule %} -s {{ rule.source }}{% endif %}
+{%- if 'dest' in rule %} -d {{ rule.dest }}{% endif %}
+{%- if 'limit' in rule %} --limit {{ rule.limit }}{% endif %}
+{%- if 'jump' in rule%} -j {{ rule.jump }}{% endif %}
+{%- if 'logprefix' in rule %} --log-prefix "{{ rule.logprefix }}"{% endif %}
+{%- if 'loglevel' in rule %} --log-level {{ rule.loglevel }}{% endif %}
+
+{% endif -%}
+				{% endfor -%}
+			{% endif -%}
+
 		{% endif -%}
 
-		{% if 'pipes_to' in chain -%}
-{% for pipe in chain.pipes_to -%}
--A {{ chain.name }} -p {{ pipe.proto }} -m {{ pipe.proto }} -s {{ pipe.source }} -j {{ pipe.chain }}
-{% endfor -%}
-		{%- endif -%}
-
-		{% if 'jump' in chain -%}
+{% if 'jump' in chain -%}
 -A {{ chain.name }} -j {{ chain.jump }}
-		{%- endif -%}
+{% endif -%}
 
-	{% endfor -%}
-{%- endif %}
-
--A INPUT -p ipv6-icmp -j ACCEPT
--A OUTPUT -p ipv6-icmp -j ACCEPT
--A INPUT -p igmp -j ACCEPT
--A OUTPUT -p igmp -j ACCEPT
--A INPUT -m limit --limit 5/min -j LOG --log-prefix "ip6tables denied: " --log-level 7
+	{% endfor %}
+{%- endif -%}
 
 COMMIT
